Version 3.9.3     unreleased

	* Adjust GHA build process to allow builds for stacked PRs.
	* Update the jinja2 transitive dependency to address CVE-2025-27516.
	* Update the requests transitive dependency to address CVE-2024-47081.
	* Update the urllib3 transitive dependency to address CVE-2025-50181.

Version 3.9.2     21 Jan 2025

	* Add Sphinx configuration path to .readthedocs.yml.
	* Set $SOURCE_DATE_EPOCH on build so sdist contents get sane timestamps.

Version 3.9.1     10 Jan 2025

	* Pull in latest version of run-script-framework.
	* Upgrade to poetry-dynamic-versioning v1.5.2 for minor fixes.
	* Add .python-version in preferred order to support pyenv.
	* Add missing runtime dependency on importlib-metadata.

Version 3.9.0     08 Jan 2025

	* Migrate to Poetry v2 and project-managed Poetry plugins.
	* Move configuration into pyproject.toml for coverage.
	* Upgrade to gha-shared-workflows@v8 for Poetry v2 support.
	* Update dependencies to match versions in Debian trixie.

Version 3.8.3     02 Jan 2025

	* Add GitHub security policy in SECURITY.md.
	* Pull in latest version of run-script-framework.
	* Update dependencies to address Dependabot warnings.
	* Upgrade to gha-shared-workflows@v7 with publish improvements.
	* Change the default branch in GitHub from master to main.

Version 3.8.2     15 Oct 2024

	* Pull in latest updates from run-script-framework.
	* Simplify GHA integration with coveralls.io.
	* Clarify that Debian stable is the target for dependencies.
	* Update transitive dependencies to address Dependabot warnings.
	* Add support for Python v3.13 and drop support for v3.9.
	* Upgrade to Poetry v1.8.4 for official Python 3.13 support.
	* Bump readthedocs build to python 3.10 and ubuntu-24.04.
	* Adjust getFunctionReference() to use Python 3 callable().
	* Convert to posixpath.isabs() to work around change in Python v3.13.

Version 3.8.1     26 Feb 2024

	* Upgrade to Poetry v1.8.0 and make related adjustments.